--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>EXPENSIFY</title>
         <link rel="shortcut icon" href="/img/favicon.ico" />
+        <link rel="stylesheet" type="text/css" href="/styles.css" />
     </head>
     <body>
         <div id="app"></div>
