--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>EXPENSIFY</title>
-        <link rel="shortcut icon" href="/img/favicon.ico" />
+        <link rel="shortcut icon" href="/imgages/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
     </head>
     <body>
